k8s/overlays/staging/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-read-timeout: "190"
spec:
  rules:
    - host: toflit18-pprd.medialab.sciences-po.fr
      http:
        paths:
          - path: /
            backend:
              serviceName: client
              servicePort: 80
